tests/sema/fail/v24_fail_main_parameters.ep
# COMPILE_FAIL: main function cannot have parameters
fun main(value: i64): void {
}
